# EmergencyMedicalSystem

./: CMakeLists.txt  README.md  atencionMedica.cpp  atencionMedica.h  main.cpp  salidaDelPaciente.cpp  salidaDelPaciente.h  triage.cpp  triage.h
